--- a/app/views/cars/home.html.erb
+++ b/app/views/cars/home.html.erb
@@ -56,6 +56,10 @@
       <option selected>model...</option>
     </select>
   </div>
+  <div class="form-group">
+    <label for="miles">Miles</label>
+    <input type="number" min="0" step="1" id="miles" class="form-control">
+  </div>
   <button value="sumbit" id="submit" class="btn btn-primary">Submit</button>
   <!-- select_tag "credit_card", options_for_select(@years), "", data: { url: 'cars/1985', remote: true } %> -->
 </form>
