--- a/app/views/cars/home.html.erb
+++ b/app/views/cars/home.html.erb
@@ -72,6 +72,7 @@
   const year = document.querySelector("#year");
   const make = document.querySelector("#make");
   const model = document.querySelector("#model");
+  const miles = document.querySelector("#miles");
   const results = document.querySelector("#results");
   const submit = document.querySelector("#submit");
 
@@ -110,19 +111,38 @@
   const getCar = (event) => {
     event.preventDefault();
     results.innerHTML = "";
-    fetch(`cars/${year.value}/${make.value}/${encodeURIComponent(model.value)}`)
+
+
+    if (!miles.value == "") {
+      // with miles data
+      var carURL = `cars/${year.value}/${make.value}/${encodeURIComponent(model.value)}?miles=${miles.value}`
+    } else {
+      // without miles data
+      var carURL = `cars/${year.value}/${make.value}/${encodeURIComponent(model.value)}`
+    }
+
+    fetch(carURL)
     .then(response => response.json())
     .then((data) => {
       console.log(data)
-
-        const item = `<p>${data.year} ${data.make} ${data.model}</p>
+        const car_data = `<p>${data.car.year} ${data.car.make} ${data.car.model}</p>
         <ul>
-          <li>MPG: ${data.mileage}</li>
-          <li>Cylinders: ${data.cylinders}</li>
-          <li>Liters: ${data.liters}</li>
-          <li>Drive: ${data.drive}</li>
-          <li>Transmission: ${data.trany}</li>
+          <li>MPG: ${data.car.mileage}</li>
+          <li>Cylinders: ${data.car.cylinders}</li>
+          <li>Liters: ${data.car.liters}</li>
+          <li>Drive: ${data.car.drive}</li>
+          <li>Transmission: ${data.car.trany}</li>
         </ul>`
+
+        if (!miles.value == "") {
+          var fuel_economy_data = `<p>Trips around the world: ${data.fuel.trips}</p>
+          <p>Gallons consumed: ${data.fuel.gallons}</p>`
+        } else {
+          var fuel_economy_data = "<p>Enter your car's mileage to see your fuel economy data.</p>"
+        }
+
+        const item = car_data + fuel_economy_data
+
         results.insertAdjacentHTML("beforeend", item);
 
     });
